update views and controllers